# CGCenter

./: .gitignore  CGCenter.sln  CGCenter.vcxproj  CGCenter.vcxproj.filters  CMakeLists.txt  LICENSE  README.md  note.md
3dmodels/: 20-livingroom_obj.rar  32-livingroom_fbx.rar
3dmodels/20-livingroom_obj/: InteriorTest.mtl
docs/: 类设计图.vsdx
libs/assimp/x64/: IrrXML.lib  zlibstatic.lib
src/app/: main.cpp
src/runtime/: PointLight.cpp  PointLight.h  Render.cpp  arealight.h  assetParser.cpp  assetParser.h  camera.cpp  camera.h  config.h  cubemap.cpp  cubemap.h  cubemappass.cpp  cubemappass.h  directLight.cpp  framebuffer.h  graphNode.cpp  graphNode.h  graphicNode.cpp  graphicNode.h  indexbuffer.h  light.h  material.h  mesh.cpp  mesh.h  meshconstdata.h  model.cpp  model.h  planemesh.cpp  program.cpp  program.h  render.h  renderGraph.cpp  renderGraph.h  resourceManager.cpp  resourceManager.h  scene.cpp  scene.h  shader.cpp  shader.h  shaderBase.cpp  (+12 more)
src/runtime/basic/: smartptr.h
src/runtime/component/: component.h  renderableComponent.h
src/runtime/entity/: entitybase.cpp  entitybase.h
src/runtime/geometry/: cubemesh.cpp  cubemesh.h  mesh.cpp  mesh.h  meshconstdata.h  model.cpp  model.h  planemesh.cpp  planemesh.h  rectanglemesh.cpp  rectanglemesh.h  squaremesh.cpp  squaremesh.h  trianglemesh.cpp  (+1 more)
src/shaders/: main.frag  main.vert  simple_colored_mesh.frag  simple_colored_mesh.vert  simple_depth_map_generate.frag  simple_depth_map_generate.vert  skybox.vert  test.frag  test.vert  test_textured.frag  vsm_generate.frag
src/ui/: uiframework.cpp  uiframework.h
(+20 files in other folders)
